# aoc

./: .gitignore  CMakeLists.txt  fetch_in.sh  gen_pch.sh  readme.md
archieve/2020/: day1.hs  day10a.py  day10b.py  day11a.py  day11b.py  day12a.py  day12b.py  day13a.py  day13b.py  day14a.py  day14b.py  day15a.py  day15b.py  day16a.py  day16b.py  day17a.py  day17b.py  day18a.py  day18b.py  day1a.py  day1b.py  day2a.py  day2b.py  day3a.py  day3b.py  day4a.py  day4b.py  day5a.py  day5b.py  day6a.py  day6b.py  day7a.cpp  day7b-improved.cpp  day7b.cpp  day8a.py  day8b.py  day9a.py  day9b.py
archieve/2021/: day01a.py  day01b.py  day02a.py  day02b.py  day03a.py  day03b.py  day04a.py  day04b.py  day05a.py  day05b.py  day06a.py  day06b.py  day07a.py  day07b.py  day08a.py  day08b.py  day09a.py  day09b.py  day10a.py  day10b.py  day11a.py  day11b.py  day12a.py  day12b.py  day13a.py  day13b.py  day14a.py  day14b.py  day15a.py  day15b.py  day16a.py  day16b.py  day17a.py  day17b.py  day18a.py  day18b.py  day19a.py  day19b.py  day20a.py  day20b.py  (+3 more)
archieve/2022/: day01a.py  day01b.py  day02a.py  day02b.py  day03a.py  day03b.py  day04a.py  day04b.py  day05a.py  day05b.py  day06a.py  day06b.py  day07a.py  day07b.py  day08a.py  day08b.py  day09a.py  day09b.py  day10a.py  day10b.py  run.sh
archieve/2023/: day01a.py  day01b.py  day02a.py  day02b.py  day03a.py  day03b.py  day04a.py  day04b.py  day05a.py  day06a.py  day06b.py  day07a.py  day07b.py  day08a.py  day08b.py  day09a.py  day09b.py  day10a.py  day10b.py  run.sh
cpp/: CMakeLists.txt
cpp/src/: 1.cpp  7.cpp
src/: 1.cpp
(+1 files in other folders)
